--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,6 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - .:/app
+      - ./inventory.db:/app/inventory.db
+    environment:
+      - PYTHONUNBUFFERED=1
